...
    <string name="Favourites">Favourites</string>
    <string name="Subscriptions">Subscriptions</string>
    <string name="Subscribers">Subscribers</string>

    <string name="ErrorOccurred">Error</string>
    <string name="errorImageRetrieve">Error while retrieving the picture</string>
    <string name="errorOnlineFeature">Online feature, please log in</string>

    <string name="Instructions">Instructions</string>
    <string name="Ingredients">Ingredients</string>
    <string name="CreateRecipe">Create recipe</string>
    <string name="EnterName">Recipe title:</string>
    <string name="EnterIngredients">Ingredients:</string>
...
    <string name="hintInstr">Instruction 1</string>
    <string name="EnterIngr">Ingredient 1</string>
    <string name="Quantity">Quantity</string>
    <string name="Recipes">Recipes</string>
    <string name="searchMessage">Search for a recipe</string>

    <string name="RateButton">Rate me !</string>
    <string name="RateText">How many stars would you give to the recipe ?</string>
    <string name="sendRate">Send rate</string>
    <string name="Rate">Rate</string>
    <string name="add_a_comment">(Optional) Add a comment</string>

    <string name="VoiceRecognitionSwitch">Voice Recognition</string>
...
